--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "node main.js",
-    "dev": "nodemon main.js"
+    "start": "node main.js",
+    "dev": "nodemon main.js",
+    "test": "jest"
   },
-  "keywords": [],
+  "keywords": ["telegram", "bot", "education"],
   "author": "RB_GROUP_COMPANY",
   "license": "ISC",
-  "description": "this bot is for Education Center📚",
+  "description": "Telegram bot for Education Center 📚",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "node-telegram-bot-api": "^0.66.0",
-    "nodemon": "^3.1.9"
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.66.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.9",
     "jest": "^29.7.0"
   }
 }
